test/types/string/assignToChar/testInit.9.good
Helpers.chpl:2: In function 'testInit':
Helpers.chpl:3: error: cannot initialize 'x' of type 'uint(8)' from '"a"'
Helpers.chpl:3: note: did you mean to call '.toByte()'?
  testInit.chpl:22: called as testInit(param strBytes = "a", type toType = uint(8))
